Create the search result
This commit will do the following:
- Create query of the selected flight and show the result
- Create a search result form with radio button for each flight

Ticket id: TSK-15

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -2,3 +2,7 @@
 <h2>Your One-Stop Shop for Flights</h2>
 
 <%= render "flight_search_form" %>
+
+<% unless @flights.empty? %>
+  <%= render "flight_result_form", flights: @flights %>
+<% end %>
