dev: Set up create action for new Booking
Ticket id: TSK-9

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -20,7 +20,9 @@
 
 <h3>Please Enter Passenger Information:</h3>
 
-<%= form_with model: @booking do |form| %>
+<%= form_with model: @booking, data: { turbo: false } do |form| %>
+  
+  <%= form.hidden_field :flight_id, value: params[:flight_id] %>
   <% i = 0 %>
   <%= form.fields_for :passengers do |sub_form| %>
     <p>Passenger <%= i + 1 %></p>
