feat: Edit index page to show the list of available airports

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -5,4 +5,7 @@
 
 <% unless @flights.empty? %>
   <%= render "flight_result_form", flights: @flights %>
+<% else %>
+  <p>Please select your flight details</p>
+  <%= render "list_of_airports", airports: @airports %>
 <% end %>
