--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -1,9 +1,13 @@
 :root {
   --font-primary: 'Roboto', sans-serif;
-  --font-display: 'Gajraj One', cursive;
-  --font-logo: 'Pacifico', cursive;
+  --font-header: 'Poppins', sans-serif;
 
-  --color-primary-900: #000000;
+  --font-weight-regular: 400;
+  --font-weight-bold: 700;
+
+  --color-primary-900: #0e335f;
+  --color-primary-600: #26476f;
+  --color-primary-200: #cfd6df;
   --color-primary-000: #ffffff;
 
   --color-text-100: #f5f5f5;
@@ -56,7 +60,8 @@ a:not([class]) {
 
 /* Make images easier to work with */
 img,
-picture {
+picture,
+svg {
   max-width: 100%;
   display: block;
 }
