style: Add style to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,2 +1,2 @@
-<h1>Odin Flight Booker</h1>
-<h2>Your One-Stop Shop for Flights</h2>
+<h1 class="main-header">Odin Flight Booker</h1>
+<h2 class="sub-header">Your One-Stop Shop for Norse Flights</h2>
