--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
   </head>
 
   <body>
-    <%= render "layouts/header" %>
+    <header class="container primary-header">
+      <%= render "layouts/header" %>
+    </header>
     <%= yield %>
   </body>
 </html>
