style: Add styling to search form
This commit will change the position of passenger select input due to
its dropdown width in mobile size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@
     <header class="container primary-header">
       <%= render "layouts/header" %>
     </header>
-    <%= yield %>
+    <main class="container">
+      <%= yield %>
+    </main>
   </body>
 </html>
