--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -23,6 +23,40 @@
   font-weight: var(--font-weight-regular);
 }
 
+.button {
+  width: 100%;
+  font-size: 1rem;
+  font-weight: var(--font-weight-bold);
+  text-transform: uppercase;
+  text-align: center;
+  background-color: var(--color-primary-900);
+  color: var(--color-text-100);
+  padding: 0.5em;
+  border: none;
+  border-radius: 5px;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1em 0.5em;
+}
+
+.search-form .button {
+  grid-column: span 3;
+}
+
+.select-date {
+  display: flex;
+  grid-column: span 3;
+  gap: 0.5em;
+}
+
+select {
+  width: min(300px, 100%);
+  padding: 5px;
+}
+
 @media only screen and (min-width: 600px) {
   .primary-header {
     padding: 4em;
