--- a/app/views/flights/_list_of_airports.html.erb
+++ b/app/views/flights/_list_of_airports.html.erb
@@ -1,19 +1,21 @@
-<h3>List of Available Airports</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th scope="col">Code</th>
-      <th scope="col">Name</th>
-    </tr>
-  </thead>
+<section class="list-of-airport">
+  <h3 class="section-title">List of Available Airports</h3>
   
-  <tbody>
-    <% airports.each do |airport| %>
+  <table class="airport-table">
+    <thead>
       <tr>
-        <td><%= airport.code %></td>
-        <td><%= airport.name %></td>
+        <th scope="col">Code</th>
+        <th scope="col">Name</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% airports.each do |airport| %>
+        <tr>
+          <td><%= airport.code %></td>
+          <td><%= airport.name %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</section>
