style: Add styling to search result page

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -11,6 +11,7 @@
   --color-primary-000: #ffffff;
 
   --color-text-100: #f5f5f5;
+  --color-text-400: #494949;
   --color-text-900: #333333;
 
   --color-success-600: #1d7a4f;
