--- a/app/views/flights/_flight_result_form.html.erb
+++ b/app/views/flights/_flight_result_form.html.erb
@@ -1,27 +1,30 @@
-<h3>Search Results:</h3>
-
-<%= form_with url: "/bookings/new", method: :get, data: { turbo: false } do |form| %>
-  <% flights.each do |flight| %>
-    <%= form.label :flight_details do %>
-      <%= form.radio_button :flight_id, flight.id, checked: flight.id == @default_selected_flight.id %>
-      <div class="flight-details-card">
-        <div class="departure-details">
-          <p><%= flight.date.strftime("%I:%M %p") %></p>
-          <p><%= flight.departure_airport.name %> <span>(<%= flight.departure_airport.code %>)</span></p>
+<section class="search-result">
+  <h3 class="section-title">Search Results:</h3>
+  
+  <%= form_with url: "/bookings/new", method: :get, data: { turbo: false } do |form| %>
+    <% flights.each do |flight| %>
+      <%= form.label :flight_details, class: "flight-details-card" do %>
+        <%= form.radio_button :flight_id, flight.id, checked: flight.id == @default_selected_flight.id %>
+        <div class="flight-details">
+          <div class="departure-details">
+            <p class="time"><%= flight.date.strftime("%I:%M %p") %></p>
+            <p class="airport"><%= flight.departure_airport.name %> <span>(<%= flight.departure_airport.code %>)</span></p>
+          </div>
+          <div class="trip-details">
+            <p>Nonstop</p>
+            <hr>
+            <p><%= pluralize(flight.duration, "hour") %></p>
+          </div>
+          <div class="arrival-details">
+            <p class="time"><%= (flight.date + flight.duration.hour).strftime("%I:%M %p") %></p>
+            <p class="airport"><%= flight.arrival_airport.name %> <span>(<%= flight.arrival_airport.code %>)</span></p>
+          </div>
         </div>
-        <div class="trip_details">
-          <p>Nonstop</p>
-          <p><%= pluralize(flight.duration, "hour") %></p>
-        </div>
-        <div class="arrival-details">
-          <p><%= (flight.date + flight.duration.hour).strftime("%I:%M %p") %></p>
-          <p><%= flight.arrival_airport.name %> <span>(<%= flight.arrival_airport.code %>)</span></p>
-        </div>
-      </div>
+      <% end %>
     <% end %>
+  
+    <%= form.hidden_field :num_passenger, value: params[:num_passenger] %>
+  
+    <%= form.submit "Select Flight", class: "button" %>
   <% end %>
-
-  <%= form.hidden_field :num_passenger, value: params[:num_passenger] %>
-
-  <%= form.submit "Select Flight" %>
-<% end %>
+</section>
