--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -61,6 +61,15 @@
   border-radius: 5px;
 }
 
+.link-button {
+  width: 100%;
+}
+
+.link-button a {
+  text-decoration: none;
+  display: block;
+}
+
 .search-form {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
