style: Update height to fit

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -47,9 +47,13 @@ html:focus-within {
   scroll-behavior: smooth;
 }
 
+html {
+  height: 100%;
+}
+
 /* Set core body defaults */
 body {
-  min-height: 100vh;
+  min-height: 100%;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
